--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -4,9 +4,11 @@
   overflow: hidden;
   background-color: white;
   border-radius: 8px;
-  width: 400px;
+  width: 100%;
+  max-width: 400px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   position: relative;
+  margin: 0 auto;
 }
 
 .news__keyword {
@@ -66,7 +68,7 @@
   border-radius: 8px;
   border: none;
   position: absolute;
-  margin-left: 340px;
+  margin-left: calc(100% - 50px);
   margin-top: 24px;
   cursor: pointer;
 }
@@ -85,7 +87,7 @@
 }
 
 .news-card__image {
-  width: 400px;
+  width: 100%;
   height: 272px;
 }
 
@@ -221,5 +223,17 @@
   .news-card__source {
     font-size: 16px;
     line-height: 20px;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .news-card {
+    width: calc(100% - 20px);
+    margin: 0 auto;
+  }
+
+  .news-card__image {
+    width: 100%;
+    height: auto;
   }
 }
