--- a/src/components/SavedNewsCardList/SavedNewsCardList.css
+++ b/src/components/SavedNewsCardList/SavedNewsCardList.css
@@ -4,7 +4,9 @@
   background-color: #f5f6f7;
   padding: 40px;
   height: auto;
-  width: auto;
+  width: 100%;
+  max-width: 400px;
+  margin: 0 auto;
 }
 
 .saved__news-cards-container {
@@ -20,5 +22,12 @@
     width: auto;
     height: auto;
     padding: 20px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .saved__news-cards-container {
+    flex-direction: column;
+    align-items: center;
   }
 }
